--- a/static/css/board_page.css
+++ b/static/css/board_page.css
@@ -6,13 +6,11 @@ div.main_board {
   width: 98%;
   height: 86vh;
   margin: auto;
-  /*div.list:last-of-type {
-    background-color: inherit;
-    padding-top: 0;
-    margin-top: 0;
-  }*/
 }
-div.main_board div.list {
+div.main_board div.allLists {
+  height: 100%;
+}
+div.main_board div.allLists div.list {
   display: inline-block;
   width: 250px;
   height: 92%;
@@ -21,84 +19,84 @@ div.main_board div.list {
   margin-left: 1em;
   border-radius: 3px;
 }
-div.main_board div.list div.head {
+div.main_board div.allLists div.list div.listName {
   height: 40px;
   padding-left: 10px;
 }
-div.main_board div.list div.head h4 span.delete {
+div.main_board div.allLists div.list div.listName h4 span.delete {
   float: right;
   margin-right: 10px;
   cursor: pointer;
 }
-div.main_board div.list div.head h4 span.delete:hover {
+div.main_board div.allLists div.list div.listName h4 span.delete:hover {
   color: #0067a3;
   font-weight: 800;
 }
-div.main_board div.list div.main {
+div.main_board div.allLists div.list div.allCards {
   overflow: scroll;
   overflow: -moz-scrollbars-vertical;
-  height: 78%;
+  height: 90%;
   padding-bottom: 8px;
 }
-div.main_board div.list div.main img.image {
+div.main_board div.allLists div.list div.allCards img.image {
   width: 90%;
   margin-left: 5%;
   margin-bottom: 8px;
   cursor: pointer;
 }
-div.main_board div.list div.main div.modal div.modal-body {
+div.main_board div.allLists div.list div.allCards div.modal div.modal-body {
   white-space: normal;
 }
-div.main_board div.list div.main div.modal div.modal-body img.modal-image {
+div.main_board div.allLists div.list div.allCards div.modal div.modal-body img.modal-image {
   width: 100%;
 }
-div.main_board div.list div.main div.card {
+div.main_board div.allLists div.list div.allCards div.card {
   border-radius: 3px;
   background: #FFFFFF;
   width: 90%;
   margin: auto auto 8px;
 }
-div.main_board div.list div.main div.card p.content {
+div.main_board div.allLists div.list div.allCards div.card p.content {
   white-space: normal;
   margin-left: 10px;
   padding-top: 3px;
   width: 80%;
 }
-div.main_board div.list div.main div.card p span.delete {
+div.main_board div.allLists div.list div.allCards div.card p span.delete {
   width: 10%;
   display: inline-block;
   float: right;
   text-align: center;
   cursor: pointer;
 }
-div.main_board div.list div.main div.card p span.delete:hover {
+div.main_board div.allLists div.list div.allCards div.card p span.delete:hover {
   color: #0067a3;
 }
-div.main_board div.list div.add {
+div.main_board div.allLists div.list div.allCards div.add {
   height: 20%;
 }
-div.main_board div.list div.add form.add_card {
+div.main_board div.allLists div.list div.allCards div.add form.addCardForm {
   width: 90%;
   margin: auto;
 }
-div.main_board div.list div.add form.add_card input.add_card {
+div.main_board div.allLists div.list div.allCards div.add form.addCardForm input.add_card {
   display: none;
 }
-div.main_board div.list div.add form.add_card input.content {
+div.main_board div.allLists div.list div.allCards div.add form.addCardForm input.content {
   width: 100%;
 }
-div.main_board div.list div.add form.add_card input.add {
+div.main_board div.allLists div.list div.allCards div.add form.addCardForm input.add {
   display: none;
 }
-div.main_board div.list div.add form.upload {
+div.main_board div.allLists div.list div.allCards div.add form.upload {
   margin-top: 3px;
   margin-left: 5%;
 }
-div.main_board div.list div.add form.upload div.file-upload {
+div.main_board div.allLists div.list div.allCards div.add form.upload div.file-upload {
   position: relative;
   overflow: hidden;
 }
-div.main_board div.list div.add form.upload div.file-upload input.upload {
+div.main_board div.allLists div.list div.allCards div.add form.upload div.file-upload input.upload {
   position: absolute;
   top: 0;
   right: 0;
@@ -109,13 +107,19 @@ div.main_board div.list div.add form.upload div.file-upload input.upload {
   opacity: 0;
   filter: alpha(opacity=0);
 }
-div.main_board form.add_list {
+div.main_board div.allLists div.list div.allCards div.add form.upload input[type=submit] {
+  margin-left: 5px;
+}
+div.main_board div.allLists .clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+div.main_board form.addListForm {
   margin-left: 1em;
   margin-top: 10px;
   padding-top: 0;
 }
-div.main_board .clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+div.main_board form.addListForm input[type=submit] {
+  margin-left: 5px;
 }
